tests/compile_fail/safe_simd_wrong_token.stderr
error[E0433]: failed to resolve: could not find `generated` in `archmage`
  --> tests/compile_fail/safe_simd_wrong_token.rs:11:27
   |
11 |         let _ = archmage::generated::avx::_mm256_loadu_ps(sse2, &data);
   |                           ^^^^^^^^^ could not find `generated` in `archmage`

warning: unused import: `AvxToken`
 --> tests/compile_fail/safe_simd_wrong_token.rs:4:40
  |
4 | use archmage::tokens::x86::{Sse2Token, AvxToken};
  |                                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
